--- a/styles.css
+++ b/styles.css
@@ -30,10 +30,12 @@ button {
     cursor: pointer;
 }
 
-#sign-image {
+#sign-box {
     width: 100px;
     height: 100px;
-    margin-bottom: 10px;
+    margin: 10px auto;
+    border: 3px solid black;
+    display: none;
 }
 
 .option-button {
